# rabbitmq-telegram

./: .env.example  .gitignore  publisher.py  pyproject.toml  run.py
src/drivers/: telegram_sender.py
src/main/rabbitmq_configs/: callback.py  consumer.py  consumer_tests.py  publisher.py  publisher_tests.py
tests/: test_consumer.py  test_publisher.py
